--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,12 +6,18 @@
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
         android:text="@string/main_title"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/course_rv"/>
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:id="@+id/course_rv"
+        />
+
     <Button
         android:id="@+id/login_btn"
         android:layout_width="match_parent"
@@ -26,5 +32,4 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:text="@string/main_login"/>
-
 </LinearLayout>
