--- a/app/src/main/res/layout/course_cell_fragment.xml
+++ b/app/src/main/res/layout/course_cell_fragment.xml
@@ -2,21 +2,19 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/course_cell_image"
-        android:src="@mipmap/ic_launcher"
         />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/course_cell_name"
         android:textSize="12sp"
+        android:gravity="center"
         />
 
 </androidx.cardview.widget.CardView>
