--- a/app/src/main/res/layout/course_cell_fragment.xml
+++ b/app/src/main/res/layout/course_cell_fragment.xml
@@ -3,7 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,5 +19,6 @@
         android:textSize="12sp"
         android:gravity="center"
         />
+</LinearLayout>
 
 </androidx.cardview.widget.CardView>
