--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -6,13 +6,5 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.hit.maestro.fragments.MainFragment"
-        android:label="MainFragment" >
-        <action
-            android:id="@+id/action_mainFragment_to_registerDialogFragment"
-            app:destination="@id/registerDialogFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/registerDialogFragment"
-        android:name="com.hit.maestro.fragments.RegisterDialogFragment"
-        android:label="RegisterDialogFragment" />
+        android:label="MainFragment" />
 </navigation>
