--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -17,6 +17,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.5"
             android:gravity="center"
+            android:text="hello"
             android:id="@+id/hello_tv"/>
 
         <TextView
