--- a/app/src/main/res/layout/fragment_about_course.xml
+++ b/app/src/main/res/layout/fragment_about_course.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.AboutCourse">
+    tools:context=".fragments.AboutCourseFragment">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
