--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -34,6 +34,10 @@
             android:id="@+id/course_rv" />
 
         <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/test"/>
+        <Button
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="0dp"
