--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -91,4 +91,14 @@
         android:id="@+id/submit_btn"
         android:textAllCaps="false"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:text="forgot"
+        android:textColor="#04198A"
+        android:id="@+id/forgot_btn"
+        android:textStyle="bold"
+        android:clickable="true"/>
+
 </LinearLayout>
