--- a/app/src/main/res/layout/lesson_fragment.xml
+++ b/app/src/main/res/layout/lesson_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,11 +8,50 @@
         android:id="@+id/youtube_player_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:videoId="827jmswqnEA"
         app:autoPlay="false"
         app:showFullScreenButton="true"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/youtube_player_view"
+        android:layout_above="@id/send_line"
+        android:background="#C7CF74"
+        android:id="@+id/chat_rv"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lesson_rv"/>
-</LinearLayout>
+        android:padding="5dp"
+        android:id="@+id/send_line"
+        android:background="#fff"
+        android:layout_alignParentBottom="true">
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/btn_attach"
+            android:background="#ffff"
+            android:src="@drawable/attach_file"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:id="@+id/text_send"
+            android:background="@android:color/transparent"
+            android:hint="Type message"
+            android:layout_toStartOf="@id/btn_send"
+            android:layout_centerVertical="true"/>
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_baseline_send_24"
+            android:id="@+id/btn_send"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
