--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -6,10 +6,6 @@
     android:orientation="vertical"
     android:background="#F8E008"
     android:padding="40dp">
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/register_iv"/>
 
     <TextView
         android:layout_width="200dp"
@@ -91,6 +87,12 @@
                 android:textSize="13sp"
                 android:id="@+id/confirmPassword_input"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/select_pic"
+                android:textColor="@color/black"
+                android:layout_marginTop="20dp"/>
             <LinearLayout
                 android:id="@+id/buttons_layout"
                 android:layout_width="match_parent"
@@ -146,7 +148,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="10sp"
         android:id="@+id/note"
         android:textColor="#C11313"
         android:text=""/>
