--- a/app/src/main/res/layout/lesson_fragment.xml
+++ b/app/src/main/res/layout/lesson_fragment.xml
@@ -17,7 +17,7 @@
         android:layout_below="@id/youtube_player_view"
         android:layout_above="@id/send_line"
         android:background="#C7CF74"
-        android:id="@+id/chat_rv"/>
+        android:id="@+id/conv_rv"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
