--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -19,7 +19,11 @@
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.hit.maestro.fragments.ChatFragment"
-        android:label="ChatFragment" />
+        android:label="ChatFragment" >
+        <action
+            android:id="@+id/action_chatFragment_to_conversationFragment"
+            app:destination="@id/conversationFragment" />
+    </fragment>
     <fragment
         android:id="@+id/courseFragment"
         android:name="com.hit.maestro.fragments.CourseFragment"
@@ -43,19 +47,11 @@
     <fragment
         android:id="@+id/userListFragment"
         android:name="com.hit.maestro.fragments.UserListFragment"
-        android:label="UserListFragment" >
-        <action
-            android:id="@+id/action_userListFragment_to_conversationFragment"
-            app:destination="@id/conversationFragment" />
-    </fragment>
+        android:label="UserListFragment" />
     <fragment
         android:id="@+id/chatListFragment"
         android:name="com.hit.maestro.fragments.ChatListFragment"
-        android:label="ChatListFragment" >
-        <action
-            android:id="@+id/action_chatListFragment_to_conversationFragment"
-            app:destination="@id/conversationFragment" />
-    </fragment>
+        android:label="ChatListFragment" />
     <fragment
         android:id="@+id/conversationFragment"
         android:name="com.hit.maestro.fragments.ConversationFragment"
