--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#F8E008"
     android:padding="40dp">
@@ -103,7 +103,7 @@
                 android:layout_marginBottom="5dp"
                 android:paddingTop="5dp">
                 <Button
-                    android:id="@+id/gallery"
+                    android:id="@+id/add_pic"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -116,22 +116,15 @@
                     android:drawablePadding="5dp"
                     android:paddingLeft="10dp"
                     android:layout_margin="5dp"
-                    android:text="Open Gallery"/>
-                <Button
-                    android:id="@+id/camera"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingRight="10dp"
-                    android:drawablePadding="3dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:paddingLeft="10dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="5dp"
-                    android:backgroundTint="@color/white"
-                    android:layout_margin="5dp"
-                    android:text="Open Camera"/>
+                    android:text="Add pic"/>
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@mipmap/ic_launcher"
+                    android:layout_margin="10dp"
+                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+                    android:id="@+id/user_image"
+                    />
             </LinearLayout>
 
         </LinearLayout>
