--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <group>
     <item
         android:id="@+id/item_sign_up"
+        android:icon="@drawable/signup"
         android:title="@string/Sign_up"/>
     <item
         android:id="@+id/item_sign_in"
+        android:icon="@drawable/signin"
         android:title="@string/sign_in"/>
     <item
         android:id="@+id/item_sign_out"
+        android:icon="@drawable/signout"
         android:title="@string/Sign_out"/>
+    </group>
+    <item android:title="">
+        <menu>
+            <item
+                android:id="@+id/item_chat"
+                android:title="@string/chat"
+                android:icon="@drawable/chat"/>
+        </menu>
+    </item>
 
 </menu>
