--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
+    <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="cornerSize">50%</item>
     </style>
 </resources>
